--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 
 <mat-toolbar color="primary">
     <span>ROBOT WEB GUI</span>
-    <mat-button-toggle-group *ngIf="tabIndex==0" value="Model" style="margin-left: 50px;" #group="matButtonToggleGroup" name="mode" aria-label="Font Style" (change)="changeView(group.value)">
+    <mat-button-toggle-group *ngIf="tabIndex==0" [(ngModel)]="toggleGlobal" style="margin-left: 50px;" #group="matButtonToggleGroup" name="mode" aria-label="Font Style" (change)="changeView(group.value)">
         <mat-button-toggle value="Plotter">Plotter</mat-button-toggle>
         <mat-button-toggle value="Model">Model</mat-button-toggle>
         <mat-button-toggle value="AllPlots">4Plots</mat-button-toggle>
     </mat-button-toggle-group>
-    <mat-button-toggle-group *ngIf="tabIndex==0 && !allPlotsViewFlag" value="Global" style="margin-left: 50px;" #groupPanel="matButtonToggleGroup" name="modePanel" aria-label="Font Style" (change)="changeViewPanel(groupPanel.value)">
+    <mat-button-toggle-group *ngIf="tabIndex==0 && !allPlotsViewFlag" [(ngModel)]="toggleModel" style="margin-left: 50px;" #groupPanel="matButtonToggleGroup" name="modePanel" aria-label="Font Style" (change)="changeViewPanel(groupPanel.value)">
         <mat-button-toggle value="Global">Global</mat-button-toggle>
         <mat-button-toggle value="Single">Single</mat-button-toggle>
         </mat-button-toggle-group>
