--- a/src/app/tree-panel/tree-panel.component.html
+++ b/src/app/tree-panel/tree-panel.component.html
@@ -27,7 +27,7 @@ fxLayoutGap.xs="0">
     <div class="item item-3"  fxFlex="10" >
         <div style="width:100%; height:100%">
             <div style="width:100%; height:100%">
-                   {{selectedDevice}} <button  style="margin-left: 20px;" *ngIf="isJoint" mat-raised-button color="primary" type="button" (click)="plotState(jointId,selectedDevice)">PlotState</button>
+                   {{selectedDevice}} <button  style="float: right;" *ngIf="isJoint" mat-raised-button color="primary" type="button" (click)="plotState(jointId,selectedDevice)">PlotState</button>
             </div> 
         </div> 
     </div>
